# synthestitch

./: Cargo.toml  README.md
.github/workflows/: tests.yml
data/origami/: arithmetic.json  arithmetic_small.json  bigram_test.json  bigram_test_const_2.json  bigram_test_hard.json  bigram_test_impossible.json  bigram_test_list.json  bigram_test_list_small.json  bigram_test_py.json  map_aug29_small.json  origami_just_map.json  origami_solutions.json  sample_probabilities.json  simple_bigram_test.json
data/origami/probs_set/: probs_1.json  probs_2.json  probs_3.json  probs_4.json  probs_5.json  probs_6.json
data/origami/test_expected/bigram/list/: expected_probs_5.json
data/origami/test_expected/bigram/simple/: expected_probs_5.json
data/origami/test_expected/uniform/simple/: expected.json
data/origami/test_expected/unigram/list/: expected_probs_3.json  expected_probs_4.json
data/origami/test_expected/unigram/python/: expected_probs_1.json  expected_probs_3.json  expected_probs_5.json
data/origami/test_probs/: test_probs_1.json
data/origami/test_probs_bigrams/: probs_1.json  probs_2.json  probs_3.json  probs_4.json  probs_5.json  probs_6.json
data/origami/test_probs_expected/: probs_3.json  probs_5.json  probs_6.json
data/origami/test_probs_unigrams/: probs_0.json  probs_1.json  probs_2.json  probs_3.json  probs_4.json  probs_5.json  test_probs_1.json  test_probs_6.json
data/origami/test_probs_unigrams_expected/: probs_2.json
disabled-bins/: bottom_up.rs
src/: bottom_up.rs  lib.rs  model.rs  task.rs  top_down.rs  util.rs
tests/: unigram_tests.rs
(+1 files in other folders)
