[package]
name = "synthestitch"
version = "0.1.0"
authors = ["Matthew Bowers <mlbowers@mit.edu>", "Theo X. Olausson <theoxo@mit.edu>"]
edition = "2018"
license = "MIT"
description = "A scalable abstraction learning library"
repository = "https://github.com/mlb2251/stitch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0", features = ["preserve_order"]}
clap = { version = "3.1.0", features = ["derive"]}
serde = { version =  "1.0", features = ["derive"]}
once_cell = "1.16.0"
itertools = "0.10.3"
colorful = "0.2.1"
rustc-hash = "1.1.0"
ordered-float = "3.0.0"
lambdas = "0.2.0"

[patch.crates-io]
lambdas = { git = "https://github.com/mlb2251/lambdas", rev = "b8d4868fb2c7a132b43a84292d7d3271d8ad3d43"}
# lambdas = { path = "../lambdas"}

[profile.release]
debug = true # for flamegraphs

